[package]
name = "plumtuna"
version = "0.0.1"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
edition = "2018"

[dependencies]
atomic_immut = "0.1"
bytecodec = { version = "0.4", features = ["bincode_codec", "json_codec"] }
fibers = "0.1"
fibers_global = "0.1"
fibers_http_server = "0.1"
futures = "0.1"
httpcodec = "0.2"
plumcast = { version = "0.1", features = ["serialize"] }
rand = "0.6"
serde = "1"
serde_derive = "1"
serde_json = "1"
slog = "2"
sloggers = "0.3"
structopt = "0.2"
trackable = "0.2"
url = "1"
